--- a/app/src/main/res/layout/fragment_cap_org_gerencia.xml
+++ b/app/src/main/res/layout/fragment_cap_org_gerencia.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:layout_marginLeft="@dimen/activity_horizontal_margin"
     android:layout_marginRight="@dimen/activity_horizontal_margin"
-    tools:context="com.jcuentas.inleggo.CapOrgGerenciaFragment">
+    tools:context="com.jcuentas.inleggo.ui.fragment.CapOrgGerenciaFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
