Se realizo la pantalla de login y se agrego efectos de traslation

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="logo_login_height">220dp</dimen>
+    <dimen name="button_login_sign">6dp</dimen>
+    <dimen name="txv_login_registrar">4dp</dimen>
 </resources>
