--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,14 +3,23 @@
     <color name="spinner_base_color">#44000000</color>
 
     <!--Material Design-->
-    <color name="primary">#3F51B5</color>
-    <color name="primary_dark">#303F9F</color>
-    <color name="primary_light">#C5CAE9</color>
-    <color name="accent">#448AFF</color>
+    <!--<color name="primary">#3F51B5</color>-->
+    <!--<color name="primary_dark">#303F9F</color>-->
+    <!--<color name="primary_light">#C5CAE9</color>-->
+    <!--<color name="accent">#448AFF</color>-->
+    <!--<color name="primary_text">#212121</color>-->
+    <!--<color name="secondary_text">#727272</color>-->
+    <!--<color name="icons">#FFFFFF</color>-->
+    <!--<color name="divider">#B6B6B6</color>-->
+
+    <!--Material Design inleggo-->
+    <color name="primary">#0AA89E</color>
+    <color name="primary_dark">#066265</color>
+    <color name="primary_light">#E5E6E6</color>
+    <color name="accent">#681A7F</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#727272</color>
     <color name="icons">#FFFFFF</color>
     <color name="divider">#B6B6B6</color>
 
-    <color name="divider1">#80000000</color>
 </resources>
