--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,6 +2,18 @@
 
     <!-- Base application theme. -->
     <!--<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
+    <!--<style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">-->
+        <!--&lt;!&ndash; Customize your theme here. &ndash;&gt;-->
+
+        <!--<item name="colorPrimary">@color/primary</item>-->
+        <!--<item name="colorPrimaryDark">@color/primary_dark</item>-->
+        <!--<item name="colorAccent">@color/accent</item>-->
+        <!--<item name="android:windowBackground">@color/primary_light</item> // Fondo-->
+        <!--<item name="android:textColorPrimary">@color/primary_text</item>-->
+        <!--<item name="android:textColorSecondary">@color/secondary_text</item>-->
+
+    <!--</style>-->
+
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
 
@@ -13,5 +25,20 @@
         <item name="android:textColorSecondary">@color/secondary_text</item>
 
     </style>
+
+    <style name="inleggo">
+        <!--<item name="Verde">#0AA89E</item>-->
+        <!--<item name="Verde_Oscuro">#066962</item>-->
+        <!--<item name="Fondo">#E5E6E6</item>-->
+        <!--<item name="Fondo_entre_tablas">#F7F7F7</item>-->
+        <!--<item name="Color_texto_1">#313534</item>-->
+        <!--<item name="Color_texto_2">#9AA09F</item>-->
+        <!--<item name="Color_texto_3">#0aa89e</item>-->
+        <!--<item name="Color_texto_4">#066265</item>-->
+        <!--<item name="Color_texto_5">#681a7f</item>-->
+        <!--<item name="Fondo_panel_izquierdo">#2B323A</item>-->
+    </style>
+
+
 
 </resources>
