--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.jcuentas.inleggo.LoginActivity">
+    tools:context="com.jcuentas.inleggo.ui.activity.LoginActivity">
 
 
     <ImageView
