--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.jcuentas.inleggo.SplashActivity">
+    tools:context="com.jcuentas.inleggo.ui.activity.SplashActivity">
 
     <ImageView
         android:id="@+id/imv_logo"
